manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: app1
  labels:
    gateway-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: app2
  labels:
    gateway-access: "true"
